--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "main": "src/js/paraload.js",
   "author": "espretto",
   "devDependencies": {
+    "concat": "^1.0.0",
     "grunt": "~0.4.5",
     "grunt-contrib-clean": "~0.5.0",
-    "grunt-docker": "0.0.8",
-    "grunt-contrib-uglify": "~0.4.0"
+    "grunt-contrib-uglify": "~0.4.0",
+    "grunt-docker": "0.0.8"
   },
   "scripts": {
     "gzip": "gzip -c9 dist/paraload.min.js > dist/paraload.min.js.gz"
