--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "concat": "^1.0.0",
     "grunt": "~0.4.5",
     "grunt-contrib-clean": "~0.5.0",
+    "grunt-contrib-jshint": "^0.10.0",
     "grunt-contrib-uglify": "~0.4.0",
     "grunt-docker": "0.0.8"
   },
